tests/snapshots/range_loop_local_array.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn sum_fixed() -> i32 {
    let mut __retval: i32 = 0;
    let mut a: aligned::Aligned<aligned::A16, [i32; 5]> = aligned::Aligned([0; 5]);
    let mut total: i32 = 0;
    *a = [1, 2, 3, 4, 5];
    let _v0: i32 = 0;
    total = _v0;
    {
        let mut i: i32 = 0;
        let _v1: i32 = 0;
        i = _v1;
        loop {
            let _v2: i32 = i;
            let _v3: i32 = 5;
            let _v4: bool = _v2 < _v3;
            if !_v4 {
                break;
            }
            {
                let _v5: i32 = i;
                let _v6: i64 = _v5 as i64;
                let _v7: i32 = a[(_v6 as usize)];
                let _v8: i32 = total;
                let _v9: i32 = _v8 + _v7;
                total = _v9;
            }
            let _v10: i32 = i;
            let _v11: i32 = _v10 + 1;
            i = _v11;
        }
    }
    let _v12: i32 = total;
    __retval = _v12;
    let _v13: i32 = __retval;
    return _v13;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = sum_fixed();
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: i32 = 0;
    __retval = _v4;
    let _v5: i32 = __retval;
    std::process::exit(_v5 as i32);
}
