tests/snapshots/salsa_id_stability.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn stable_function(arg0: i32) -> i32 {
    let mut value: i32 = 0;
    let mut __retval: i32 = 0;
    value = arg0;
    let _v0: i32 = value;
    let _v1: i32 = 3;
    let _v2: i32 = _v0 * _v1;
    let _v3: i32 = 1;
    let _v4: i32 = _v2 + _v3;
    __retval = _v4;
    let _v5: i32 = __retval;
    return _v5;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 7;
    let _v3: i32 = stable_function(_v2);
    let _v4: i32 = unsafe { printf(_v1 as *const i8, _v3) };
    let _v5: i32 = 0;
    __retval = _v5;
    let _v6: i32 = __retval;
    std::process::exit(_v6 as i32);
}
