tests/snapshots/saturating_arith.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut add_i: i32 = 0;
    let mut add_i_no_sat: i32 = 0;
    let mut sub_s: i16 = 0;
    let mut sub_u: u32 = 0;
    let mut u128a: u128 = 0;
    let mut add_u128: u128 = 0;
    let mut s200a: aligned::Aligned<aligned::A8, bitint::BInt<200, 4, 32>> = aligned::Aligned(bitint::BInt::<200, 4, 32>::ZERO);
    let mut add_s200: aligned::Aligned<aligned::A8, bitint::BInt<200, 4, 32>> = aligned::Aligned(bitint::BInt::<200, 4, 32>::ZERO);
    let mut u200a: aligned::Aligned<aligned::A8, bitint::BUint<200, 4, 32>> = aligned::Aligned(bitint::BUint::<200, 4, 32>::ZERO);
    let mut sub_u200: aligned::Aligned<aligned::A8, bitint::BUint<200, 4, 32>> = aligned::Aligned(bitint::BUint::<200, 4, 32>::ZERO);
    let mut va: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut vb: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let mut vr: aligned::Aligned<aligned::A16, [i32; 4]> = aligned::Aligned([0; 4]);
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = i32::MAX as i32;
    add_i = _v1;
    let _v2: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = add_i;
    let _v4: i32 = unsafe { printf(_v2 as *const i8, _v3) };
    let _v5: i32 = 5;
    add_i_no_sat = _v5;
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = add_i_no_sat;
    let _v8: i32 = unsafe { printf(_v6 as *const i8, _v7) };
    let _v9: i16 = -32768;
    sub_s = _v9;
    let _v10: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v11: i16 = sub_s;
    let _v12: i32 = _v11 as i32;
    let _v13: i32 = unsafe { printf(_v10 as *const i8, _v12) };
    let _v14: u32 = 0;
    sub_u = _v14;
    let _v15: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v16: u32 = sub_u;
    let _v17: i32 = unsafe { printf(_v15 as *const i8, _v16) };
    let _v18: u128 = 0;
    let _v19: u128 = 1;
    let _v20: u128 = _v18 - _v19;
    u128a = _v20;
    let _v21: u128 = u128a;
    let _v22: u128 = 5;
    let _v23: u128 = _v21.saturating_add(_v22);
    add_u128 = _v23;
    let _v24: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v25: u128 = add_u128;
    let _v26: u128 = 0;
    let _v27: u128 = 1;
    let _v28: u128 = _v26 - _v27;
    let _v29: bool = _v25 == _v28;
    let _v30: i32 = _v29 as i32;
    let _v31: i32 = unsafe { printf(_v24 as *const i8, _v30) };
    let _v32: bitint::BInt<200, 4, 32> = bitint::BInt::<200, 4, 32>::from_decimal_str("-1");
    *s200a = _v32;
    let _v33: bitint::BInt<200, 4, 32> = *s200a;
    let _v34: bitint::BInt<200, 4, 32> = bitint::BInt::<200, 4, 32>::from_decimal_str("5");
    let _v35: bitint::BInt<200, 4, 32> = _v33.saturating_add(_v34);
    *add_s200 = _v35;
    let _v36: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v37: bitint::BInt<200, 4, 32> = *add_s200;
    let _v38: i32 = _v37.to_i128() as i32;
    let _v39: i32 = unsafe { printf(_v36 as *const i8, _v38) };
    let _v40: bitint::BUint<200, 4, 32> = bitint::BUint::<200, 4, 32>::from_decimal_str("3");
    *u200a = _v40;
    let _v41: bitint::BUint<200, 4, 32> = *u200a;
    let _v42: bitint::BUint<200, 4, 32> = bitint::BUint::<200, 4, 32>::from_decimal_str("10");
    let _v43: bitint::BUint<200, 4, 32> = _v41.saturating_sub(_v42);
    *sub_u200 = _v43;
    let _v44: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v45: bitint::BUint<200, 4, 32> = *sub_u200;
    let _v46: bitint::BUint<200, 4, 32> = bitint::BUint::<200, 4, 32>::from_decimal_str("0");
    let _v47: bool = _v45 == _v46;
    let _v48: i32 = _v47 as i32;
    let _v49: i32 = unsafe { printf(_v44 as *const i8, _v48) };
    let _v50: [i32; 4] = [2147483647, 1, -2147483648, 0];
    *va = _v50;
    let _v51: [i32; 4] = [10, 1, -10, 0];
    *vb = _v51;
    let _v52: [i32; 4] = *va;
    let _v53: [i32; 4] = *vb;
    let _v54: [i32; 4] = [_v52[0usize].saturating_add(_v53[0usize]), _v52[1usize].saturating_add(_v53[1usize]), _v52[2usize].saturating_add(_v53[2usize]), _v52[3usize].saturating_add(_v53[3usize])];
    *vr = _v54;
    let _v55: *mut i8 = b"%d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v56: [i32; 4] = *vr;
    let _v57: i32 = 0;
    let _v58: i32 = _v56[(_v57 as usize)];
    let _v59: [i32; 4] = *vr;
    let _v60: i32 = 1;
    let _v61: i32 = _v59[(_v60 as usize)];
    let _v62: [i32; 4] = *vr;
    let _v63: i32 = 2;
    let _v64: i32 = _v62[(_v63 as usize)];
    let _v65: [i32; 4] = *vr;
    let _v66: i32 = 3;
    let _v67: i32 = _v65[(_v66 as usize)];
    let _v68: i32 = unsafe { printf(_v55 as *const i8, _v58, _v61, _v64, _v67) };
    let _v69: i32 = 0;
    __retval = _v69;
    let _v70: i32 = __retval;
    std::process::exit(_v70 as i32);
}
