tests/snapshots/setjmp_recovery_extern_c_callback.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct __slate_jmp_buf_tag {
    __regs: [i64; 8],
    __mask_was_saved: i32,
    __saved_mask: [u64; 16],
}


static mut env: aligned::Aligned<aligned::A16, [__slate_jmp_buf_tag; 1]> = aligned::Aligned([__slate_jmp_buf_tag { __regs: [0; 8], __mask_was_saved: 0, __saved_mask: [0; 16] }; 1]);

static mut failures: i32 = 0;

unsafe extern "C" {
    fn longjmp(_0: *mut __slate_jmp_buf_tag, _1: i32) -> !;
    fn setjmp(_0: *mut __slate_jmp_buf_tag) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

fn fail_now() {
    let _v0: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
    let _v1: i32 = 1;
    unsafe { longjmp(_v0 as *mut __slate_jmp_buf_tag, _v1 as i32) };
    return;
}

extern "C" fn check(arg2: i32) {
    let mut ok: i32 = 0;
    ok = arg2;
    {
        let _v0: i32 = ok;
        let _v1: bool = _v0 != 0;
        let _v2: bool = !_v1;
        if _v2 {
            fail_now();
        }
    }
    let _v3: *mut i8 = b"PASS\n\0".as_ptr() as *mut i8;
    let _v4: i32 = unsafe { printf(_v3 as *const i8) };
    return;
}

fn run_case(arg0: Option<unsafe extern "C" fn(i32)>, arg1: i32) {
    let mut r#fn: Option<unsafe extern "C" fn(i32)> = None;
    let mut ok: i32 = 0;
    r#fn = arg0;
    ok = arg1;
    {
        let _v0: *mut __slate_jmp_buf_tag = std::ptr::addr_of_mut!(env).cast::<__slate_jmp_buf_tag>();
        let _v1: i32 = unsafe { setjmp(_v0 as *mut __slate_jmp_buf_tag) };
        let _v2: bool = _v1 != 0;
        if _v2 {
            let _v3: i32 = unsafe { failures };
            let _v4: i32 = _v3 + 1;
            unsafe {
                failures = _v4;
            }
            let _v5: *mut i8 = b"FAIL\n\0".as_ptr() as *mut i8;
            let _v6: i32 = unsafe { printf(_v5 as *const i8) };
            return;
        }
    }
    let _v7: Option<unsafe extern "C" fn(i32)> = r#fn;
    let _v8: i32 = ok;
    unsafe { _v7.unwrap()(_v8) };
    return;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut r#fn: Option<unsafe extern "C" fn(i32)> = None;
    let _v0: i32 = 0;
    __retval = _v0;
    r#fn = unsafe { std::mem::transmute::<*const (), Option<unsafe extern "C" fn(i32)>>(check as *const ()) };
    let _v1: Option<unsafe extern "C" fn(i32)> = r#fn;
    let _v2: i32 = 0;
    run_case(_v1, _v2);
    let _v3: *mut i8 = b"failures: %d\n\0".as_ptr() as *mut i8;
    let _v4: i32 = unsafe { failures };
    let _v5: i32 = unsafe { printf(_v3 as *const i8, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
