tests/snapshots/shr.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn ishr(arg0: i32, arg1: i32) -> i32 {
    let mut a: i32 = 0;
    let mut b: i32 = 0;
    let mut __retval: i32 = 0;
    a = arg0;
    b = arg1;
    let _v0: i32 = a;
    let _v1: i32 = b;
    let _v2: i32 = _v0 >> _v1;
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut u: u32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 256;
    let _v3: i32 = 3;
    let _v4: i32 = ishr(_v2, _v3);
    let _v5: i32 = unsafe { printf(_v1 as *const i8, _v4) };
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = -256;
    let _v8: i32 = 3;
    let _v9: i32 = ishr(_v7, _v8);
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
    let _v11: u32 = 2147483648u32;
    u = _v11;
    let _v12: *mut i8 = b"%u\n\0".as_ptr() as *mut i8;
    let _v13: u32 = u;
    let _v14: i32 = 4;
    let _v15: u32 = _v13 >> _v14;
    let _v16: i32 = unsafe { printf(_v12 as *const i8, _v15) };
    let _v17: i32 = 0;
    __retval = _v17;
    let _v18: i32 = __retval;
    std::process::exit(_v18 as i32);
}
