tests/snapshots/sizeof.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[derive(Clone, Copy)]
struct Pair {
    left: i32,
    right: i32,
}


#[repr(C)]
#[derive(Clone, Copy)]
union Slot {
    value: i32,
    raw: u32,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn sizeof_values() -> i32 {
    let mut __retval: i32 = 0;
    let mut values: [i32; 3] = [0; 3];
    let _v0: u64 = 4;
    let _v1: u64 = 12;
    let _v2: u64 = _v0 + _v1;
    let _v3: u64 = std::mem::size_of::<Pair>() as u64;
    let _v4: u64 = _v2 + _v3;
    let _v5: u64 = std::mem::size_of::<Slot>() as u64;
    let _v6: u64 = _v4 + _v5;
    let _v7: i32 = _v6 as i32;
    __retval = _v7;
    let _v8: i32 = __retval;
    return _v8;
}

fn sizeof_expr() -> i32 {
    let mut __retval: i32 = 0;
    let mut value: i32 = 0;
    let _v0: i32 = 0;
    value = _v0;
    let _v1: i32 = 4;
    __retval = _v1;
    let _v2: i32 = __retval;
    return _v2;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = sizeof_values();
    let _v3: i32 = unsafe { printf(_v1 as *const i8, _v2) };
    let _v4: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v5: i32 = sizeof_expr();
    let _v6: i32 = unsafe { printf(_v4 as *const i8, _v5) };
    let _v7: i32 = 0;
    __retval = _v7;
    let _v8: i32 = __retval;
    std::process::exit(_v8 as i32);
}
