tests/snapshots/sprintf_buffer_printf.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn sprintf(_0: *mut i8, _1: *const i8, ...) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut buf: aligned::Aligned<aligned::A16, [i8; 64]> = aligned::Aligned([0; 64]);
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = buf.as_mut_ptr() as *mut i8;
    let _v2: *mut i8 = b"%d-%d\0".as_ptr() as *mut i8;
    let _v3: i32 = 3;
    let _v4: i32 = 4;
    let _v5: i32 = unsafe { sprintf(_v1 as *mut i8, _v2 as *const i8, _v3, _v4) };
    let _v6: *mut i8 = b"value: %s\n\0".as_ptr() as *mut i8;
    let _v7: *mut i8 = buf.as_mut_ptr() as *mut i8;
    let _v8: i32 = unsafe { printf(_v6 as *const i8, _v7) };
    let _v9: i32 = 0;
    __retval = _v9;
    let _v10: i32 = __retval;
    std::process::exit(_v10 as i32);
}
